--- a/_config.yml
+++ b/_config.yml
@@ -14,27 +14,27 @@ timezone:
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+title: Kareem's Blog # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the subtitle
+tagline: Offensive Security Engineer | Red Team Ops | CTF Addict | Malware Reversing | Dark Web Threat Hunter chasing APTs and chaos. # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  Blog, Penetration Testing, Red Teaming, Bug hunting, Kareem Walid.
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
-url: ""
+url: "https://kareemwalid.github.io"
 
 github:
-  username: github_username # change to your GitHub username
+  username: kareemwalid # change to your GitHub username
 
 twitter:
-  username: twitter_username # change to your Twitter username
+  username: kareemwalid17 # change to your Twitter username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
+  name: Kareem Walid
   email: example@domain.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
